--- a/packages/neon_framework/example/pubspec.yaml
+++ b/packages/neon_framework/example/pubspec.yaml
@@ -48,6 +48,9 @@ dev_dependencies:
       path: packages/neon_lints
   vector_graphics_compiler: any
 
+dependency_overrides:
+  file_picker: 8.1.4
+
 flutter:
   uses-material-design: true
   assets:
