--- a/packages/neon_framework/example/pubspec_overrides.yaml
+++ b/packages/neon_framework/example/pubspec_overrides.yaml
@@ -1,4 +1,4 @@
-# melos_managed_dependency_overrides: account_repository,cookie_store,dashboard_app,dynamite_runtime,files_app,interceptor_http_client,neon_framework,neon_http_client,neon_lints,neon_rich_text,news_app,nextcloud,notes_app,notifications_app,notifications_push_repository,sort_box,talk_app
+# melos_managed_dependency_overrides: account_repository,cookie_store,dashboard_app,dynamite_runtime,files_app,interceptor_http_client,neon_framework,neon_http_client,neon_lints,neon_rich_text,news_app,nextcloud,notes_app,notifications_app,notifications_push_repository,sort_box,talk_app,file_picker
 dependency_overrides:
   account_repository:
     path: ../packages/account_repository
@@ -34,3 +34,4 @@ dependency_overrides:
     path: ../packages/sort_box
   talk_app:
     path: ../packages/talk_app
+  file_picker: 8.1.4
