build: Fix melos hooks
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,6 @@ environment:
 dev_dependencies:
   commitlint_cli: ^0.8.1
   fvm: ^3.2.1
-  melos: ^6.0.0
+  melos: 6.0.0
   custom_lint: ^0.7.0
   coverage: ^1.11.1
