--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -90,6 +90,22 @@
         "test_api",
         "test_core"
       ]
+    },
+    {
+      "groupName": "analyzer",
+      "matchPackageNames": [
+        "analyzer",
+        "analyzer_plugin"
+      ]
+    },
+    {
+      "groupName": "bloc",
+      "matchPackageNames": [
+        "bloc",
+        "bloc_concurrency",
+        "bloc_test",
+        "flutter_bloc"
+      ]
     }
   ]
 }
