--- a/packages/neon_framework/packages/account_repository/pubspec.yaml
+++ b/packages/neon_framework/packages/account_repository/pubspec.yaml
@@ -31,9 +31,10 @@ dev_dependencies:
   built_value_test: ^8.9.5
   flutter:
     sdk: flutter
+  flutter_test:
+    sdk: flutter
   mocktail: ^1.0.4
   neon_lints:
     git:
       url: https://github.com/nextcloud/neon
       path: packages/neon_lints
-  test: ^1.25.2
