--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,6 +7,7 @@
     "dependencies"
   ],
   "rangeStrategy": "bump",
+  "prConcurrentLimit": 0,
   "lockFileMaintenance": {
     "enabled": true,
     "automerge": true
